...
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/joinRoomMessage"
        android:id="@+id/linearLayout">

        <AutoCompleteTextView
            android:id="@+id/room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_room_name"
            android:inputType="textShortMessage"
            android:maxLines="1"
            android:singleLine="true"
...
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:textColorHint="#aaa" />

        <Button
            android:id="@+id/join_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="attemptJoin"
            android:text="@string/action_join"
            android:textStyle="bold"
...
