...
        android:id="@id/listFooter"
        android:layout_alignParentBottom="true"
        android:background="#333">


        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="Close"
            android:text = "&lt; Leave Room  "
            android:layout_centerVertical="true"
...
